--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseurl = "https://username.github.io"
 DefaultContentLanguage = "en"
-title = "Long The HoG"
+title = "Obsidian 24"
 # Using theme as git submodule 
 theme = "beautifulhugo"
 # Or when using theme as hugo module
@@ -53,7 +53,7 @@ pygmentsCodefencesGuessSyntax = true
 
 [Params.author]
   # Set only your "username" for default hosts and full URLs otherwise (e.g., "https://MyGitLab.org/username")
-  name = "Long The HoG"
+  name = "Obsidian 24"
   website = ""
   email = "longhg04515@gmail.com"
   github = "longthg-workshops"
