--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://username.github.io"
+baseurl = "https://longkira-obsidian24.github.io/"
 DefaultContentLanguage = "en"
 title = "Obsidian 24"
 # Using theme as git submodule 
